--- a/docs/10.JavaSE/40.JVM/50.JVM.md
+++ b/docs/10.JavaSE/40.JVM/50.JVM.md
@@ -216,3 +216,52 @@ author:
 - jinfo：查看java配置信息
 - jdb：调试工具
 - Arths：Arthas
+
+## CPU100%排查
+
+### 原因
+
+- 死循环
+- 大量GC
+- 大量密集型任务
+- 死锁
+
+https://mp.weixin.qq.com/s/GyFl-rxQkCZM4q65dl5o1g
+https://mp.weixin.qq.com/s/TcprDRjzQCXQ7OQmJ0E5XQ
+
+### jstack
+
+- 获取进程id
+  - top
+- 查看进程内的线程id
+  - top -Hp 3030，找到最消耗cpu的线程id3051，H表示显示线程级别信息，p表示指定进程id
+- 将线程id转换为16进制
+  - printf "%x\n" 3051      # beb
+- 通过自带的jstack导出堆栈，查看代码
+  - jstack 3051 > grep beb（转换后的十六进制代码）
+
+### show-busy-threads 脚本
+
+### arthas
+
+- 下载
+  - curl -O https://arthas.aliyun.com/arthas-boot.jar
+- 启动
+  - java -jar arthas-boot.jar
+- 执行thread命令
+  - thread
+- 找到堆栈信息
+  - thread 18
+
+- 堆栈+线程+锁+内存+代码+对象+对象引用：jstack -m -l <pid> > jstack.log
+
+### 总结
+
+生产环境如果cpu已经被打满了，不要一上来就说什么top，jstack，记住，真实的生产环境如果CPU已经要被打爆了的话
+第一选择肯定是重启，并且如果你近段时间有发布的话，还要考虑是否可以回滚，保障生产环境的稳定性是最重要的
+还有就是，如果CPU已经被打爆了，不管arthas还是jstack大概率也是执行不了的，jvm无法响应
+
+参考答案：
+之前碰到过cpu被打满的情况，线上第一时间进行了重启，重启过程中查了服务那段时间日志，链路，指标，没有发现特殊异常。
+当重启完成后，开始排查具体的原因，通过定期执行top命令，发现java进程的cpu使用率确实在增加。
+接着通过 top -Hp pid命令，以及jstack命令拿到了应用里cpu使用率最高的线程的堆栈，通过分析堆栈定位到具体的代码，是因为代码触发了一个临界值，进入了死循环。
