--- a/docs/30.中间件/10.mysql/00.mysql.md
+++ b/docs/30.中间件/10.mysql/00.mysql.md
@@ -13,6 +13,14 @@ author:
 ---
 # mysql
 
+## 什么是事务
+
+事务是一系列操作的集合，这些操作要么全部成功，要么全部失败。
+
+事务时一系列操作组成的工作单元，该工作单元的操作是不可分割的，要么所有操作都做，要么都不做。
+
+事务是一系列操作组成的工作单元，该工作单元内的操作是不可分割的，即要么所有操作都做，要么所有操作都不做，这就是事务。
+
 ## DDL（数据定义语言）和DML（数据操纵语言）
 
 ### DDL包含创建修改删除表结构和数据类型的命令
